--- a/index.html
+++ b/index.html
@@ -10,33 +10,20 @@
 body { font-family:'Bebas Neue', Arial, sans-serif; background:#000; color:#fff; text-align:center; }
 .hero { padding:2rem; }
 .hero-logo { width:200px; max-width:70%; margin:0 auto; display:block; }
+
+/* VIDEOS */
 .videos-section { background:#111; padding:1rem; }
 .videos-section h2 { font-size:2.3rem; margin-bottom:1rem; }
-
 .video-list {
   display:grid;
-  gap:1rem; /* default small gap for mobile portrait */
+  gap:1rem; /* small mobile gap */
   padding:0 1rem;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  justify-content:center;
 }
+@media (min-width:768px){ .video-list { gap:1.5rem; } }
+@media (min-width:1024px){ .video-list { grid-template-columns:repeat(4,1fr); gap:2rem; } }
 
-/* Medium screens / landscape phones / tablets */
-@media (min-width:768px) {
-  .video-list {
-    gap:1.5rem; /* slightly larger gap in landscape */
-  }
-}
-
-/* Desktop / large landscape / 1080p+ */
-@media (min-width:1024px) {
-  .video-list {
-    grid-template-columns: repeat(4,1fr);
-    gap:2rem; /* more spacing between videos */
-  }
-}
-
-.video-item { position:relative; cursor:pointer; border-radius:10px; overflow:hidden; background:#000; min-height:150px; }
+.video-item { position:relative; border-radius:10px; overflow:hidden; background:#000; cursor:pointer; min-height:150px; }
 .video-thumb, iframe { width:100%; aspect-ratio:16/9; object-fit:cover; display:block; border-radius:10px; }
 .play-overlay { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); font-size:4rem; color:rgba(255,255,255,0.85); pointer-events:none; text-shadow:0 0 20px #000; }
 .video-title { position:absolute; bottom:0; left:0; width:100%; padding:0.3rem 0.5rem; color:#fff; font-size:0.9rem; line-height:1.2; background:linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0)); white-space:normal; border-bottom-left-radius:10px; border-bottom-right-radius:10px; }
@@ -62,10 +49,9 @@ body { font-family:'Bebas Neue', Arial, sans-serif; background:#000; color:#fff;
 </div>
 
 <script>
-const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8"; 
+const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8";
 const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ";
 
-let uploadsPlaylistId = "";
 let nextPageToken = "";
 let loading = false;
 
@@ -73,136 +59,103 @@ const videoListDiv = document.getElementById("videoList");
 const heroLogoContainer = document.getElementById("heroLogoContainer");
 
 // Lazy load observer
-const lazyObserver = new IntersectionObserver(entries => {
-  entries.forEach(entry => {
+const lazyObserver = new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
     if(entry.isIntersecting){
       const img = entry.target;
-      if(img.dataset.src){
-        img.src = img.dataset.src;
-        img.removeAttribute('data-src');
-      }
+      if(img.dataset.src){ img.src=img.dataset.src; img.removeAttribute('data-src'); }
       lazyObserver.unobserve(img);
     }
   });
 },{ rootMargin:"200px 0px" });
 
-// Load channel logo and uploads playlist ID
-async function loadChannelData() {
+// Load channel logo
+async function loadChannelLogo(){
   try {
-    const res = await fetch(`https://www.googleapis.com/youtube/v3/channels?part=snippet,contentDetails&id=${CHANNEL_ID}&key=${API_KEY}`);
+    const res = await fetch(`https://www.googleapis.com/youtube/v3/channels?part=snippet&id=${CHANNEL_ID}&key=${API_KEY}`);
     const data = await res.json();
     if(data.items && data.items.length>0){
-      const channel = data.items[0];
-      const logoUrl = channel.snippet.thumbnails.high.url;
+      const logoUrl = data.items[0].snippet.thumbnails.high.url;
       const img = document.createElement("img");
       img.src = logoUrl;
       img.alt = "Channel Logo";
-      img.className = "hero-logo";
+      img.className="hero-logo";
       heroLogoContainer.appendChild(img);
-
-      uploadsPlaylistId = channel.contentDetails.relatedPlaylists.uploads;
-
-      // Load videos and ensure viewport is filled
-      await fillViewport();
     }
   } catch(err){ console.error(err); }
 }
 
-// Load videos from uploads playlist
-async function loadVideos(maxVideos = 10) {
-  if(loading || !uploadsPlaylistId) return false;
-  loading = true;
-  let loadedAny = false;
-
-  const url = `https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&playlistId=${uploadsPlaylistId}&maxResults=${maxVideos}&pageToken=${nextPageToken}&key=${API_KEY}`;
+// Load videos using search endpoint
+async function loadVideos(maxResults=10){
+  if(loading) return;
+  loading=true;
+  const url=`https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&channelId=${CHANNEL_ID}&part=snippet,id&type=video&order=date&maxResults=${maxResults}&pageToken=${nextPageToken}`;
   try {
-    const res = await fetch(url);
-    const data = await res.json();
+    const res=await fetch(url);
+    const data=await res.json();
     nextPageToken = data.nextPageToken || "";
+    data.items.forEach(item=>{
+      if(item.snippet.liveBroadcastContent==="none"){
+        const vid = item.id.videoId;
+        const thumbUrl = item.snippet.thumbnails.maxres?.url || item.snippet.thumbnails.high.url;
+        const title = item.snippet.title;
 
-    data.items.forEach(item => {
-      const vid = item.snippet.resourceId.videoId;
-      const thumbUrl = item.snippet.thumbnails.maxres?.url || item.snippet.thumbnails.high.url;
-      const title = item.snippet.title;
+        const container = document.createElement("div");
+        container.className="video-item";
+        container.innerHTML = `
+          <img class="video-thumb" data-src="${thumbUrl}" alt="">
+          <div class="play-overlay">▶</div>
+          <div class="video-title">${title}</div>
+        `;
+        videoListDiv.appendChild(container);
+        lazyObserver.observe(container.querySelector(".video-thumb"));
 
-      const container = document.createElement("div");
-      container.className = "video-item";
-      container.innerHTML = `
-        <img class="video-thumb" data-src="${thumbUrl}" alt="">
-        <div class="play-overlay">▶</div>
-        <div class="video-title">${title}</div>
-      `;
-      videoListDiv.appendChild(container);
-      const img = container.querySelector(".video-thumb");
-      lazyObserver.observe(img);
-
-      container.addEventListener("click", () => {
-        const iframe = document.createElement("iframe");
-        iframe.src = `https://www.youtube.com/embed/${vid}?autoplay=1`;
-        iframe.allowFullscreen = true;
-        iframe.style.width = "100%";
-        iframe.style.height = "100%";
-        container.innerHTML = "";
-        container.appendChild(iframe);
-      });
-
-      // Hover preview on desktop
-      if(window.innerWidth >= 768){
-        container.addEventListener("mouseenter", () => {
-          if(!container.querySelector("iframe.preview")){
-            const preview = document.createElement("iframe");
-            preview.className = "preview";
-            preview.src = `https://www.youtube.com/embed/${vid}?autoplay=1&mute=1&controls=0&loop=1&playlist=${vid}`;
-            preview.style.width = "100%";
-            preview.style.height = "100%";
-            preview.style.position = "absolute";
-            preview.style.top = 0;
-            preview.style.left = 0;
-            preview.style.pointerEvents = "none";
-            container.appendChild(preview);
-          }
+        // Click to replace thumbnail with iframe
+        container.addEventListener("click",()=>{
+          const iframe=document.createElement("iframe");
+          iframe.src=`https://www.youtube.com/embed/${vid}?autoplay=1`;
+          iframe.allowFullscreen=true;
+          container.innerHTML="";
+          container.appendChild(iframe);
         });
-        container.addEventListener("mouseleave", () => {
-          const preview = container.querySelector("iframe.preview");
-          if(preview) preview.remove();
-        });
+
+        // Desktop hover preview
+        if(window.innerWidth>=768){
+          container.addEventListener("mouseenter",()=>{
+            if(!container.querySelector("iframe.preview")){
+              const preview=document.createElement("iframe");
+              preview.className="preview";
+              preview.src=`https://www.youtube.com/embed/${vid}?autoplay=1&mute=1&controls=0&loop=1&playlist=${vid}`;
+              preview.style.width="100%";
+              preview.style.height="100%";
+              preview.style.position="absolute";
+              preview.style.top=0;
+              preview.style.left=0;
+              preview.style.pointerEvents="none";
+              container.appendChild(preview);
+            }
+          });
+          container.addEventListener("mouseleave",()=>{
+            const preview=container.querySelector("iframe.preview");
+            if(preview) preview.remove();
+          });
+        }
       }
-
-      loadedAny = true;
     });
-
   } catch(err){ console.error(err); }
-
-  loading = false;
-  return loadedAny;
-}
-
-// Fill viewport with enough videos based on current columns
-async function fillViewport() {
-  let columns = Math.min(4, Math.floor(videoListDiv.offsetWidth / 250));
-  columns = columns || 1;
-  let rowsNeeded = Math.ceil(window.innerHeight / 200); // approx video height
-  let videosNeeded = columns * rowsNeeded;
-
-  while(videoListDiv.children.length < videosNeeded && nextPageToken){
-    const loaded = await loadVideos(videosNeeded - videoListDiv.children.length);
-    if(!loaded) break;
-  }
+  loading=false;
 }
 
 // Infinite scroll
-window.addEventListener("scroll", async () => {
-  if(window.innerHeight + window.scrollY >= document.body.offsetHeight-300 && nextPageToken && !loading){
+window.addEventListener("scroll", async()=>{
+  if(window.innerHeight + window.scrollY >= document.body.offsetHeight - 300 && nextPageToken && !loading){
     await loadVideos();
   }
 });
 
-// Update viewport fill on resize (optional)
-window.addEventListener("resize", () => {
-  fillViewport();
-});
-
-loadChannelData();
+// Initial load
+loadChannelLogo();
+loadVideos();
 </script>
 
 </body>
