--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body { font-family:'Bebas Neue', Arial, sans-serif; background:#000; color:#fff;
 .video-list {
   display:grid;
   gap:0.8rem;
-  grid-template-columns:1fr; /* default for small screens */
+  grid-template-columns:1fr;
   padding:0 1rem;
 }
 
